[package]
name = "naive-ledger"
description = "a simple naive ledger"
version = "0.1.0"
edition = "2021"
authors = [ "jilsahm" ]

[dependencies]
clap = { version = "3.0.14", features = ["cargo", "derive", "env", "regex"] }
csv = "1.1.6"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }